crates/pg_syntax/tests/snapshots/postgres_regress/regex@24.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select regexp_matches('ab', 'a(?=b)b*(?=c)c*');"
---
SelectStmt@0..47
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..45
    FuncCall@7..45
      Ident@7..21 "regexp_matches"
      Ascii40@21..22 "("
      AConst@22..26
        Sconst@22..26 "'ab'"
      Ascii44@26..27 ","
      Whitespace@27..28 " "
      AConst@28..45
        Sconst@28..45 "'a(?=b)b*(?=c)c*'"
  Ascii41@45..46 ")"
  Ascii59@46..47 ";"

