crates/pg_syntax/tests/snapshots/postgres_regress/regex@27.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select regexp_matches('b', '(?=b)b');"
---
SelectStmt@0..37
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..35
    FuncCall@7..35
      Ident@7..21 "regexp_matches"
      Ascii40@21..22 "("
      AConst@22..25
        Sconst@22..25 "'b'"
      Ascii44@25..26 ","
      Whitespace@26..27 " "
      AConst@27..35
        Sconst@27..35 "'(?=b)b'"
  Ascii41@35..36 ")"
  Ascii59@36..37 ";"

