crates/pg_syntax/tests/snapshots/postgres_regress/regex@30.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select regexp_matches('a', 'a(?<=a)b*');"
---
SelectStmt@0..40
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..38
    FuncCall@7..38
      Ident@7..21 "regexp_matches"
      Ascii40@21..22 "("
      AConst@22..25
        Sconst@22..25 "'a'"
      Ascii44@25..26 ","
      Whitespace@26..27 " "
      AConst@27..38
        Sconst@27..38 "'a(?<=a)b*'"
  Ascii41@38..39 ")"
  Ascii59@39..40 ";"

