crates/pg_syntax/tests/snapshots/postgres_regress/regex@31.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select regexp_matches('abc', 'a(?<=a)b*(?<=b)c*');"
---
SelectStmt@0..50
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..48
    FuncCall@7..48
      Ident@7..21 "regexp_matches"
      Ascii40@21..22 "("
      AConst@22..27
        Sconst@22..27 "'abc'"
      Ascii44@27..28 ","
      Whitespace@28..29 " "
      AConst@29..48
        Sconst@29..48 "'a(?<=a)b*(?<=b)c*'"
  Ascii41@48..49 ")"
  Ascii59@49..50 ";"

