crates/pg_syntax/tests/snapshots/postgres_regress/regex@32.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select regexp_matches('ab', 'a(?<=a)b*(?<=b)c*');"
---
SelectStmt@0..49
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..47
    FuncCall@7..47
      Ident@7..21 "regexp_matches"
      Ascii40@21..22 "("
      AConst@22..26
        Sconst@22..26 "'ab'"
      Ascii44@26..27 ","
      Whitespace@27..28 " "
      AConst@28..47
        Sconst@28..47 "'a(?<=a)b*(?<=b)c*'"
  Ascii41@47..48 ")"
  Ascii59@48..49 ";"

